--- a/index.html
+++ b/index.html
@@ -135,6 +135,43 @@
 		
 	</section><!-- /section1 -->
 
+
+
+
+
+<!-- SECTION2
+	================================================= -->
+<!-- Newsletter -->
+<section id="section2" class="DarkMediumGreenBG LightGreenTypo archive-garamond-pro p-5">
+  <div class="container">
+    <div class="d-md-flex justify-content-between align-items-center">
+      <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
+
+      <div class="input-group news-input">
+        <input 
+        type="text" 
+        class="form-control" 
+        placeholder="Enter Email" 
+        >
+        <button 
+        class="btn btn-dark btn-lg" type="button"
+        >
+        Lorem
+      </button>
+      </div>
+
+
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+  
+
 <!-- Footer -->
 <footer class="p-5 DarkGreenBG LightGreenTypo text-center position-relative">
   <div class="container">
