--- a/index.html
+++ b/index.html
@@ -167,7 +167,32 @@
 
 
 
+<!-- SECTION 3
+	================================================= -->
+	<section id="section3">
+		<div class="container">
 
+			<div class="section3-header">
+				<img src="assets/img/logo/Wordmark.svg" alt="" class="wordmark">				
+				<h2 class="archive-garamond-bold DarkGreenTypo" >Lorem ipsum dolor</h2>
+			</div><!-- /section-header -->
+
+			<p class="lead DarkBrownTypo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quidem fuga maxime rerum dolores! Repellendus adipisci ratione ullam aut accusantium architecto cumque quo quae beatae obcaecati. Veniam tempora voluptas saepe laborum autem quia quos commodi accusamus rem nostrum? Cumque, sit?</p>
+
+			<div class="row">
+				<div class="col-sm-6">
+					<h3 class="archive-garamond-bold LightMediumGreenTypo" >Lorem, ipsum dolor.</h3>
+					<p class="DarkMediumGreenTypo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto obcaecati ut dolore neque eligendi temporibus, aspernatur molestiae esse, nemo unde harum. Deserunt nisi non numquam neque nihil eligendi nostrum reprehenderit ad ipsam harum, vel quasi modi perspiciatis dolorem pariatur ipsum.</p>
+				</div><!-- /col-sm- -->
+				<div class="col-sm-6">
+					<h3 class="archive-garamond-bold LightGreenTypo" >Lorem, ipsum.</h3>
+					<p class="DarkMediumGreenTypo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut quos architecto, pariatur doloremque, quisquam ex aliquam, adipisci repellat excepturi voluptas quia voluptatem quidem dignissimos molestias unde eum perferendis ab voluptatibus. Adipisci perferendis aspernatur tenetur placeat. Ex esse est cumque aut id a deserunt excepturi. Saepe inventore placeat dolore sequi commodi?</p>
+				</div><!-- /col-sm- -->
+			</div><!-- /row -->
+
+
+		</div><!-- /container -->
+	</section><!-- /section3 -->
 
 
   
