--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container-fluid">
 
         <a class="navbar-brand archive-garamond-bold uppercase DarkBrownTypo" href="#">
-          <img src="assets/img/logo/Monogram_Manuel_de_Arpe_Navbar_191231_0.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+          <img src="assets/img/logo/Monogram.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
           Manuel de Arpe
         </a>
 
@@ -194,7 +194,26 @@
 		</div><!-- /container -->
 	</section><!-- /section3 -->
 
+<!-- SECTION 4
+	================================================= -->
+	<section id="section4">
+		<div class="container">
 
+			<div class="section-header">
+
+				<img src="assets/img/logo/Monogram.svg" alt="" class="img-fluid">
+
+				<h2 class="archive-garamond-pro LightMediumBrownTypo" >Lorem, ipsum.</h2>
+			</div><!-- /section-header -->
+			
+			<div class="row">
+				<div class="DarkGreenTypo">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat repellendus deleniti tempore doloribus enim quasi, sapiente natus accusantium molestiae asperiores ratione sed id provident laborum nisi voluptates placeat similique ad voluptatibus. Sed nam voluptatum rerum porro deleniti recusandae atque excepturi nihil eligendi deserunt vitae vero eveniet quas adipisci ullam molestiae, aut voluptas exercitationem a. Laborum distinctio aliquam fugit! Dignissimos blanditiis ullam saepe quas itaque nostrum sapiente, dolorem id voluptas explicabo minima eveniet illo deleniti reprehenderit natus omnis praesentium, dolores unde porro alias. Cum itaque voluptatibus enim, libero quae a distinctio quam accusantium repellat in veritatis dolor eos ut possimus.</p>
+				</div>
+			</div><!-- /row -->
+
+		</div><!-- /container -->
+	</section><!-- /section4 -->
   
 
 <!-- Footer -->
