--- a/index.html
+++ b/index.html
@@ -214,6 +214,39 @@
 
 		</div><!-- /container -->
 	</section><!-- /section4 -->
+
+
+
+
+
+
+
+
+
+
+<!-- SECTION 5
+	================================================= -->
+	<section id="section5">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-8 offset-sm-2">
+					<h2 class="archive-garamond-bold DarkGreenTypo">lorem</h2>
+				</div><!-- /col-sm-8 -->
+			</div><!-- /row -->
+		</div><!-- /container -->
+		
+	</section>
+
+
+
+
+
+
+
+
+
+
+
   
 
 <!-- Footer -->
