--- a/index.html
+++ b/index.html
@@ -139,10 +139,6 @@
 		
 	</section><!-- /section1 -->
 
-
-
-
-
 <!-- SECTION2
 	================================================= -->
 <!-- Newsletter -->
@@ -168,8 +164,6 @@
     </div>
   </div>
 </section>
-
-
 
 <!-- SECTION 3
 	================================================= -->
@@ -219,15 +213,6 @@
 		</div><!-- /container -->
 	</section><!-- /section4 -->
 
-
-
-
-
-
-
-
-
-
 <!-- SECTION 5
 	================================================= -->
 	<section id="section5">
@@ -240,16 +225,6 @@
 		</div><!-- /container -->
 		
 	</section>
-
-
-
-
-
-
-
-
-
-
 
 <!-- SECTION 6
 	================================================= -->
@@ -286,19 +261,6 @@
 		</div><!-- /container -->
 	</section><!-- /project-featuures -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- SECTION 7
 	=================================================== -->
 
@@ -313,20 +275,6 @@
 		</div><!-- container -->
 		
 	</section><!-- featurette -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- SECTTION 8
     ================================================= -->
@@ -386,20 +334,6 @@
             </div><!--row -->
           </div><!-- container -->
     </section><!-- section8 -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- SECTTION 9
 	================================================= -->
@@ -485,58 +419,31 @@
 		</div><!-- /container -->
 	</section><!-- /section9 -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
+<!-- SECTION 10
+	================================================= -->
+	<section id="section10" data-type="background" data-speed="4">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<h2 class="archive-garamond-bold uppercase DarkGreenTypo" >Lorem, ipsum dolor.<strong>Lorem, ipsum.</strong>Lorem ipsum dolor sit.</h2>
+					<p><a href="https://www.patreon.com/user?u=32539790&fan_landing=true/" class="btn btn-lg btn-block btn-success archive-garamond-pro" target="_blank">Lorem, ipsum.</a></p>
+				</div><!-- /col-sm-6 -->
+			</div><!-- /row -->
+		</div><!-- /container -->
+	</section><!-- /section10 -->
 
 <!-- Footer -->
 <footer class="p-5 DarkGreenBG LightGreenTypo text-center position-relative">
+
   <div class="container">
-    <p class="lead Copyright">Copyright &copy; 2022 <span class="MiguelDominguez">MiguelDominguez();</span></p>
-    <a href="#" class="position-absolute bottom-0 end-0 p-5">
-      <i class="bi bi-arrow-up-circle h1"></i>
+    <p>2022  &copy; Copyright <span><a href="index.html"><img src="assets/img/logo/Portrait_Green_Light_Bg.svg" width="60" alt="" class=""></a></span><span class="">
+      <a href="index.html" class="archive-garamond-bold Footer-Wordmark uppercase" >Manuel de Arpe</a></span></p>
     </a>
+
+    <a href="#" class="position-absolute bottom-0 end-0 p-5">
+      <i class="fas fa-arrow-circle-up"></i>
+    </a>
+
   </div>
 </footer>
 
@@ -590,15 +497,6 @@
 </div>
 </div>
 
-
-
-
-  
-
-
-
-
-  
   <script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
