--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <div class="col-sm-8 col-md-6">
             <div class="row">
             <div class="col-lg-8">
-              <h2 class="archive-garamond-bold uppercase DarkGreenTypo" >Lorem, ipsum.<br> <small>Lorem, ipsum dolor.</small></h2>
+              <h2 class="archive-garamond-bold uppercase DarkGreenTypo" >Restaurador<br> <small>Biografía</small></h2>
             </div><!-- end col -->
             <div class="col-lg-4">
 							<a href="https://twitter.com/" target="_blank" class="badge social twitter"><i class="fab fa-twitter"></i></a>
@@ -300,7 +300,12 @@
 								</div><!-- end col -->
                 </div><!-- row -->
   
-                <P class="lead DarkGreenTypo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, aut, voluptates impedit debitis ducimus possimus natus explicabo culpa doloremque quaerat provident ratione ea enim! Impedit omnis, aspernatur sit laborum id voluptatem animi in blanditiis pariatur amet reiciendis mollitia consequuntur dolor illo velit? Vel nesciunt deserunt atque. Impedit, error ratione nemo quia deleniti mollitia. Illum assumenda obcaecati tenetur animi quaerat, officia, similique eius odio quis adipisci maiores. Corrupti quidem porro eum maiores adipisci explicabo magnam ipsum in alias aliquid, ullam assumenda officia asperiores, facilis iure repellat. Consequatur, velit architecto nulla minima veniam ex adipisci officia placeat debitis, soluta magnam magni ducimus?</P>
+                <P class="lead archive-garamond-bold DarkGreenTypo uppercase">
+                  <strong class="dropcap">m</strong>
+                  anuel Arpe y Retamino.
+                  </P>
+                  <p>
+                    Pintor y restaurador del museo del Prado. Hijo de Petra Retamino Arellano (fallecida en 1946) y de Manuel de Arpe. Estuvo casado con Concepción Valera de Pablo (Fallecida en Madrid el 8 mayo 1962). Realizó sus estudios en la Escuela de Artes y Aficios de Sevilla. En 1922 obtuvo mediante oposición el titulo de restaurador del ministerio de Instrucción Publica. En 1931 expuso el cuadro Alegoría de la República en el estudio de la Avenida Pi y Maragall, 16. Sería nombrado Jefe técnico de restauración del museo del Prado. En 1960 le condecoraron con la Cruz de Alfonso X el sabio.</P>
   
                 
   
