--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-8 offset-sm-2">
-					<h2 class="archive-garamond-bold DarkGreenTypo">lorem</h2>
+					<h2 class="archive-garamond-bold DarkGreenTypo">Lorem, ipsum.</h2>
 				</div><!-- /col-sm-8 -->
 			</div><!-- /row -->
 		</div><!-- /container -->
