Updated palceholder text section 8

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
   
                 <hr>
   
-                <h3>Hypokeimenonsmall<small>Lorem</small></h3>
+                <h3>Hypokeimenon<small>Lorem</small></h3>
                 <h3>Ut pictura poesis<small>Lorem</small></h3>
   
                 <!--  -->
